--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,10 @@
 // PRIMARY COLORS
 // - Gradient
-$color-gradient: hsl(6, 100%, 80%) to hsl(335, 100%, 65%);
+$color-gradient: linear-gradient(
+  to right,
+  hsl(6, 100%, 80%),
+  hsl(335, 100%, 65%)
+);
 
 // NEUTRAL COLORS
 // - Pale Blue
@@ -13,5 +17,8 @@ $color-dark-blue: hsl(228, 56%, 26%);
 $color-very-dark-blue: hsl(229, 57%, 11%);
 
 // FONTS
-
 $font-base: 14px;
+$font-base-big: 17px;
+
+// MEDIA
+$media-mid: 700px;
