fix the size fylo component

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -58,7 +58,7 @@ body {
   @media only screen and (min-width: $media-mid) {
     flex-direction: row;
     justify-content: stretch;
-    align-items: stretch;
+    align-items: end;
     gap: 2rem;
   }
 }
