--- a/styles/main.css
+++ b/styles/main.css
@@ -76,9 +76,9 @@ body {
     -webkit-box-pack: stretch;
         -ms-flex-pack: stretch;
             justify-content: stretch;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
     gap: 2rem;
   }
 }
@@ -101,6 +101,12 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
+}
+
+@media only screen and (min-width: 700px) {
+  .fylo {
+    padding-top: 4rem;
+  }
 }
 
 .fylo__logo {
